<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/perfil" />

        <item
            android:id="@+id/nav_m_party"
            android:icon="@drawable/ic_like"
            android:title="@string/eventos" />

        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete"
            android:title="@string/lixeira" />
    </group>

    <item android:title="@string/informacoes">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/info_black"
                android:title="@string/sobre" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contato" />
        </menu>
    </item>

</menu>
