<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.pablocouto.discool.ui.home.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_search"
        android:background="@android:color/transparent">
        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:paddingStart="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:visibility="visible"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edit_text_search"
            android:background="@color/colorViewDarkTransparent"/>
    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_search"
        android:scrollbars="vertical"/>


    <RelativeLayout
        android:id="@+id/empty_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/nenhum_evento_foi_encontrado"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_network"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dispositivo_sem_conexao"/>
    </RelativeLayout>

</RelativeLayout>
