<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="275dp"
    android:layout_marginEnd="2dp"
    android:layout_marginStart="2dp"
    android:layout_marginBottom="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_desc_n_page_itemhome"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/view_image_itemhome"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="3dp"
                    android:elevation="50dp">

                    <ImageView
                        android:scaleType="centerCrop"
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/image_view_item"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:src="@drawable/no_image">

                    </ImageView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/view_description_itemhome"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:paddingTop="10dp"
                    android:layout_weight="1.4">

                    <TextView
                        android:id="@+id/label_title_description_itemhome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:maxLines="2"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:text="Title of the party"/>

                    <RelativeLayout
                        android:id="@+id/scroll_of_desc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/label_title_description_itemhome"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                            android:id="@+id/label_desc_description_itemhome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="10sp"
                            android:text="@string/sample_for_party_desc"
                            android:lineSpacingMultiplier="1.2"/>
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_extra_datas_about"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/ll_desc_n_page_itemhome"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/layout_to_address"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/l_loc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                            android:layout_marginStart="3dp"
                            android:textSize="@dimen/size_item_text"
                            android:text="@string/lacation_label"/>

                        <TextView
                            android:id="@+id/label_location_itemhome"
                            android:layout_toRightOf="@+id/l_loc"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            android:layout_marginRight="30dp"
                            android:textSize="10sp"
                            android:text="Exemplo de endereço aqui"
                            android:textColor="@color/colorPrimaryDark"/>

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/btn_location_itemhome"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_location_on_black"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/layout_to_date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/l_dt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                            android:textSize="@dimen/size_item_text"
                            android:layout_marginStart="3dp"
                            android:text="@string/date_label"/>

                        <TextView
                            android:id="@+id/label_date_itemhome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="43dp"
                            android:layout_marginRight="10dp"
                            android:layout_toRightOf="@+id/l_dt"

                            android:text="00/00/0000"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="10sp" />
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/btn_date_itemhome"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_date_range_black"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_to_ticket"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="10dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/l_tkt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/darker_gray"
                            android:textStyle="bold"
                            android:layout_marginStart="3dp"
                            android:textSize="@dimen/size_item_text"
                            android:text="@string/ticket_label"/>

                        <TextView
                            android:id="@+id/label_tickets_itemhome"
                            android:layout_toRightOf="@+id/l_tkt"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="30dp"
                            android:textSize="10sp"
                            android:text="oioioioi"
                            android:textColor="@color/colorPrimaryDark"/>

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/btn_ticket_itemhome"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_local_activity_black"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>

            </LinearLayout>

            <View
                android:id="@+id/view_itemhome"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/ll_extra_datas_about"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:background="@android:color/darker_gray"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/view_itemhome"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/btn_delete_itemhome"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_delete"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/back_circle"/>

                <ImageView
                    android:id="@+id/btn_share_itemhome"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/btn_like_itemhome"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_share"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/back_circle"/>

                <ImageView
                    android:id="@+id/btn_like_itemhome"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_like"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/back_circle"/>

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>